# enterprise

./: .gitignore  CLAUDE.md  CMakeLists.txt  enterprise.sln  readme.md  test_aggregations_selector.txt  test_closure_linq.txt
src/engine/backend/: CMakeLists.txt  actionInfo.h  appData.cpp  appData.h  appDataQuery.cpp  backend.conf  backend.vcxproj  backend.vcxproj.filters  backend_cell.h  backend_core.cpp  backend_core.h  backend_exception.cpp  backend_exception.h  backend_form.cpp  backend_form.h  backend_localization.cpp  backend_localization.h  backend_mainFrame.cpp  backend_mainFrame.h  backend_metatree.h  backend_picture.cpp  backend_picture.h  backend_spreadsheet.cpp  backend_spreadsheet.h  backend_type.cpp  backend_type.h  characteristicCtor.cpp  characteristicCtor.h  clsid.h  constantCtor.cpp  constantCtor.h  fontcontainer.h  guid.cpp  guid.h  interfaceHelper.cpp  interfaceHelper.h  metaCtor.h  metaDefines.h  metadata.cpp  metadata.h  (+49 more)
src/engine/backend/cache/: byteCodeCache.cpp  byteCodeCache.h
src/engine/backend/compiler/: byteCode.cpp  byteCode.h  byteCodeAOT.cpp  codeDef.h  compileCode.cpp  compileCode.h  compileContext.cpp  compileContext.h  compileContextLinqData.h  compileModule.cpp  compileModule.h  enumFactory.cpp  enumFactory.h  enumUnit.cpp  enumUnit.h  procContext.cpp  procContext.h  procUnit.cpp  procUnit.h  procUnitLinq.cpp  procUnitState.h  procUnitValues.h  translateCode.cpp  translateCode.h  typeCtor.cpp  typeCtor.h  value.cpp  value.h  valueFactory.cpp  valueSerialization.cpp  value_res.cpp
src/engine/backend/databaseLayer/: connectionHolder.h  connectionPool.cpp  connectionPool.h  connectionScope.cpp  connectionScope.h  databaseErrorReporter.cpp  databaseErrorReporter.h  databaseLayer.cpp  databaseLayer.h  databaseLayerException.h  databaseQueryParser.cpp  databaseResultSet.cpp  databaseResultSet.h  databaseStringConverter.cpp  databaseStringConverter.h  preparedStatement.h  resultSetMetaData.cpp  resultSetMetaData.h
src/engine/backend/debugger/: debugClient.cpp  debugClient.h  debugClientAsync.cpp  debugClientBridge.cpp  debugClientBridge.h  debugClientQuery.cpp  debugDefs.h  debugEvent.h  debugServer.cpp  debugServer.h
src/engine/backend/fileSystem/: fs.cpp  fs.h  types.h
src/engine/backend/metaCollection/: metaFormObject.cpp  metaFormObject.h  metaFormObjectMenu.cpp  metaFormObjectProperty.cpp  metaFormObject_res.cpp  metaGridObject.h  metaGridObject_res.cpp  metaInterfaceObject.cpp  metaInterfaceObject.h  metaInterfaceObjectMenu.cpp  metaInterfaceObject_res.cpp  metaLanguageObject.cpp  metaLanguageObject.h  metaLanguageObjectProperty.cpp  metaLanguageObject_res.cpp  metaModuleObject.cpp  metaModuleObject.h  metaModuleObjectMenu.cpp  metaModuleObjectProperty.cpp  metaModuleObject_res.cpp  metaObject.cpp  metaObject.h  metaObjectComposite.cpp  metaObjectComposite.h  metaObjectMetadata.cpp  metaObjectMetadata.h  metaObjectMetadataEnum.cpp  metaObjectMetadataEnum.h  metaObjectMetadataMenu.cpp  metaObjectMetadataProperty.cpp  metaObjectMetadataQuery.cpp  metaObjectMetadata_res.cpp  metaObjectProperty.cpp  metaPictureObject.cpp  metaPictureObject.h  metaPictureObject_res.cpp  metaRoleObject.cpp  metaRoleObject.h  metaRoleObjectMenu.cpp  metaRoleObject_res.cpp  (+6 more)
src/engine/backend/moduleManager/: globalContextManager.cpp  globalContextManager.h  moduleManager.cpp  moduleManager.h  moduleManagerEvent.cpp  moduleManagerExt.cpp  moduleManagerExt.h  moduleManagerMetadataUnit.cpp  moduleManagerUnit.cpp
src/engine/backend/plugin/: pluginApi.h  pluginManager.cpp  pluginManager.h
src/engine/backend/propertyManager/: propertyEditor.cpp  propertyManager.h  propertyObject.cpp  propertyObject.h
src/engine/backend/res/: backend.rc  resource.h
src/engine/backend/session/: designerExclusivePolicy.cpp  designerExclusivePolicy.h  session.cpp  session.h  sessionPolicy.h  sessionRegistry.cpp  sessionRegistry.h  sessionSnapshot.cpp  sessionSnapshot.h  sessionTicket.cpp  sessionTicket.h  workerPool.h  workerPoolHeadless.cpp  workerPoolHeadless.h
src/engine/classChecker/: CMakeLists.txt  classChecker.rc  classChecker.vcxproj.vcxproj  classCheckerWnd.cpp  classCheckerWnd.h  mainApp.cpp  mainApp.h  resource.h
src/engine/codeRunner/: CMakeLists.txt  codeRunner.cpp  codeRunner.h  codeRunner.rc  codeRunner.vcxproj.vcxproj  codeRunner.vcxproj.vcxproj.filters  mainApp.cpp  mainApp.h  outputMessage.cpp  outputMessage.h  resource.h
src/engine/daemon/: CMakeLists.txt  daemon.cpp  daemon.vcxproj  deamon.vcxproj.filters
src/engine/designer/: CMakeLists.txt  designer.rc  designer.vcxproj.vcxproj  designer.vcxproj.vcxproj.filters  mainApp.cpp  mainApp.h  mainAppEvent.cpp  mainFrameDesignerCmd.cpp  mainFrameDesignerEvent.cpp  resource.h
src/engine/enterprise/: CMakeLists.txt  enterprise.rc  enterprise.vcxproj.vcxproj  enterprise.vcxproj.vcxproj.filters  mainApp.cpp  mainApp.h  mainAppEvent.cpp  mainFrameDesigner.h  mainFrameDesignerCmd.cpp  resource.h
src/engine/frontend/: CMakeLists.txt  frontend.h  frontend.vcxproj  frontend.vcxproj.filters  frontendTypes.h  wfrontend.cpp  wfrontend.h  wfrontend.vcxproj  wfrontend.vcxproj.filters  window_ptr.h
src/engine/launcher/: CMakeLists.txt  connectionDB.cpp  connectionDB.h  launcher.cpp  launcher.h  launcher.rc  launcher.vcxproj.vcxproj  mainApp.cpp  mainApp.h  resource.h
src/engine/simplePlugin/: CMakeLists.txt  simplePlugin.vcxproj.vcxproj  simplePluginDLL.cpp  simplePluginDLL.h
tests/: CMakeLists.txt  mock_database_layer.h  test_byteCodeAOT.cpp  test_clsid.cpp  test_compiler.cpp  test_connectionPool.cpp  test_number.cpp  test_pagingRamTable.cpp  test_runtime.cpp  test_session.cpp  test_value.cpp
tests/scripts/: test_closure_basic.txt  test_closure_counter.txt  test_closure_iterator.txt  test_closure_nested.txt  test_closure_suite.txt  test_linq_aggregations.txt  test_linq_chain_extended.txt  test_linq_chain_ops.txt  test_linq_group.txt  test_linq_group_into.txt  test_linq_join.txt  test_linq_nested_group.txt  test_linq_nested_innerjoin.txt  test_linq_nested_join.txt  test_linq_suite.txt
(+1018 files in other folders)
